force-app/main/default/objects/LMS_Config__c/LMS_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>LMS Config</label>
</CustomObject>