force-app/main/default/objects/LMS_Config__c/fields/Enable_Button__c.field-meta.xml
<CustomField>
    <fullName>Enable_Button__c</fullName>
    <label>Enable Button</label>
    <length>255</length>
    <type>Text</type>
</CustomField>