force-app/main/default/objects/LMS_Config__c/fields/New_Header__c.field-meta.xml
<CustomField>
    <fullName>New_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New_Header</label>
    <type>Checkbox</type>
</CustomField>