force-app/main/default/objects/LMS_Config__c/fields/Use_One_Url__c.field-meta.xml
<CustomField>
    <fullName>Use_One_Url__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use One Url</label>
    <type>Checkbox</type>
</CustomField>